--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,3 +100,30 @@
     rgba(23, 23, 23, 1)
   );
 }
+
+/* Hide scrollbar for Webkit browsers */
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.hide-scrollbar {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+/* Show scrollbar on hover */
+.show-scrollbar-on-hover:hover::-webkit-scrollbar {
+    display: block;
+    height: 8px;
+}
+
+.show-scrollbar-on-hover::-webkit-scrollbar-thumb {
+    background-color: rgb(115 115 115);
+    border-radius: 4px;
+}
+
+.show-scrollbar-on-hover {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(115 115 115) transparent;
+}
